deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-sa
      containers:
        # - name: ubuntu
        #   image: ubuntu
        #   command: ["sh", "-c", "sleep 3600"]
        - name: jenkins
          image: jenkins/jenkins:2.479.3-lts
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: /login 
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3 
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
          resources:
            requests:
              cpu: "2" 
              memory: "2G" 
            limits:
              cpu: "4" 
              memory: "4G"   
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
      nodeSelector:
        app: jenkins
